# dt-eng-zoomcamp

./: .gitignore  README.md  dbt_project.yml
01-docker-terraform/01-docker/: README.md
01-docker-terraform/01-docker/pipeline/: Dockerfile  ingest_data.py  notebook.ipynb  pipeline.py
01-docker-terraform/01-docker/test/: file2.txt  list_files.py
01-docker-terraform/02-Terraform/: main.tf  variables.tf
01-docker-terraform/hw/: data_ingestion.ipynb  pyproject.toml  querries.sql
02-workflow-orchestration/: 04_postgres_taxi_scheduled.yaml  docker-compose.yaml  main.tf  variables.tf
03-data-warehouse/: README.MD
03-data-warehouse/data_ingestion/: main.py  pyproject.toml  script.py
04-analytics-engineering/macros/: get_vendor_data.sql
04-analytics-engineering/models/marts/: dim_vendors.sql  fct_trips.sql  schema.yml
04-analytics-engineering/models/marts/reporting/: monthly_revenue_per_locations.sql
04-analytics-engineering/models/staging/: bq_sources.yaml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
04-analytics-engineering/seeds/: seeds_property.sql
05-data-platform/my-pipeline/pipeline/: pipeline.yml
05-data-platform/my-pipeline/pipeline/assets/ingestion/: payment_lookup.asset.yml  requirements.txt  trips.py
